package com.enhui.design.adapter.classadapter;

/**
 * 目标接口
 *
 * @Author: 胡恩会
 * @Date: 2020/6/26 16:11
 **/
public interface Voltage5V {
    int output5V();
}
